']' en trop dans le test sur LOGO_SITE_NORMAL (Jacques)

--- a/casse-noisettes.html
+++ b/casse-noisettes.html
@@ -101,7 +101,7 @@
 
 <tr><td>LOGO_SITE_RUBRIQUE</td><td><?php $vu=false; <BOUCLE_LOGO_SITE_RUBRIQUE(SITES)>[if ("(#LOGO_SITE_RUBRIQUE|fichier)" && !$vu) { $vu=true; echo '<img class="vignette" src="IMG/[(#LOGO_SITE_RUBRIQUE|fichier)]" width="50" height="40" alt="" />';}]</BOUCLE_LOGO_SITE_RUBRIQUE>  ?></td></tr>
 
-<tr><td>LOGO_SITE_NORMAL</td><td><?php $vu=false; <BOUCLE_LOGO_SITE_NORMAL(SITES)>[if ("(#LOGO_SITE_NORMAL|fichier)" && !$vu) { $vu=true; echo '<img class="vignette" src="IMG/[(#LOGO_SITE_NORMAL|fichier)]" width="50" height="40" alt="" />';}]]</BOUCLE_LOGO_SITE_NORMAL>  ?></td></tr>
+<tr><td>LOGO_SITE_NORMAL</td><td><?php $vu=false; <BOUCLE_LOGO_SITE_NORMAL(SITES)>[if ("(#LOGO_SITE_NORMAL|fichier)" && !$vu) { $vu=true; echo '<img class="vignette" src="IMG/[(#LOGO_SITE_NORMAL|fichier)]" width="50" height="40" alt="" />';}]</BOUCLE_LOGO_SITE_NORMAL>  ?></td></tr>
 
 <tr><td>LOGO_SITE_SURVOL</td><td><?php $vu=false; <BOUCLE_LOGO_SITE_SURVOL(SITES)>[if ("(#LOGO_SITE_SURVOL|fichier)" && !$vu) { $vu=true; echo '<img class="vignette" src="IMG/[(#LOGO_SITE_SURVOL|fichier)]" width="50" height="40" alt="" />';}]</BOUCLE_LOGO_SITE_SURVOL>  ?></td></tr>
 
