--- a/backend-breves-dist.html
+++ b/backend-breves-dist.html
@@ -10,7 +10,7 @@
 
 	<image>
 		<title>[(#NOM_SITE_SPIP|texte_backend)]</title>
-		<url>#URL_SITE_SPIP/IMG/ruboff0.gif</url>
+		<url>#URL_SITE_SPIP[/(#LOGO_SITE_SPIP||extraire_attribut{src})]</url>
 		<link>#URL_SITE_SPIP/</link>
 		<description></description>
 	</image>
@@ -20,7 +20,7 @@
 		<title>[(#TITRE|texte_backend)]</title>
 		<link>#URL_SITE_SPIP/#URL_BREVE</link>
 		<date>#DATE</date>
-		<description>[&lt;img src="#URL_SITE_SPIP/IMG/(#LOGO_BREVE|fichier)" align="left" hspace="4" vspace="4"&gt; ][(#TEXTE|texte_backend)]</description>
+		<description>[&lt;img src="#URL_SITE_SPIP/(#LOGO_BREVE||extraire_attribut{src})" align="left" hspace="4" vspace="4"&gt; ][(#TEXTE|texte_backend)]</description>
 		<dc:date>[(#DATE|date_iso)]</dc:date>
 		<dc:format>text/html</dc:format>
 		<dc:language>#LANG</dc:language>
