Forums publics: inserer le thread immediatement sans calcul global

--- a/article-dist.html
+++ b/article-dist.html
@@ -248,7 +248,7 @@
 <div class="forum-chapo">
 <div class="forum-titre"><a name="forum#ID_FORUM"></a>#TITRE</div>
 [(#DATE|affdate)][, <:par_auteur:> <A HREF="mailto:#EMAIL">(#NOM)</A>]
-</div>
+</div>#ID_THREAD
 <div class="forum-item">
 #TEXTE
 [<div class="forum-titre"><a href="(#URL_SITE)" class="spip_out">#NOM_SITE</a></div>]
@@ -265,7 +265,7 @@
 	<div class="forum-chapo">
 	<div class="forum-titre"><a name="forum#ID_FORUM"></a>#TITRE</div>
 	[(#DATE|affdate)][, <:par_auteur:> <A HREF="mailto:#EMAIL">(#NOM)</A>]
-	</div>
+	</div>#ID_THREAD
 	<div class="forum-item">
 	#TEXTE
 	[<div class="forum-titre"><a href="(#URL_SITE)" class="spip_out">#NOM_SITE</a></div>]
