le copyright en entités (+ anticiper le passage à 2005)

--- a/ecrire/copyright_fr.html
+++ b/ecrire/copyright_fr.html
@@ -25,7 +25,7 @@ a.icone:hover { text-decoration: none; }
 <p>
 <font face="Verdana,Arial,Sans,sans-serif" size="3"><b>SPIP, Syst&egrave;me de publication pour l'internet</b></font>
 
-<p><b>Copyright &copy; 2001-2004, Arnaud Martin, Antoine Pitrou, Philippe Rivi&egrave;re et Emmanuel Saint-James.</b></p>
+<p><b>Copyright &copy; 2001-2005, Arnaud Martin, Antoine Pitrou, Philippe Rivi&egrave;re et Emmanuel Saint-James.</b></p>
 <p>Ce programme est un logiciel libre&nbsp;; vous pouvez le redistribuer et/ou le modifier conform&eacute;ment aux dispositions de la Licence Publique G&eacute;n&eacute;rale GNU, telle que publi&eacute;e par la Free Software Foundation&nbsp;; version 2 de la licence, ou encore (&agrave; votre choix) toute version ult&eacute;rieure. </p>
 <p>Ce programme est distribu&eacute; dans l'espoir qu'il sera utile, mais SANS AUCUNE GARANTIE&nbsp;; sans m&ecirc;me la garantie implicite de COMMERCIALISATION ou D'ADAPTATION A UN OBJET PARTICULIER. Pour plus de d&eacute;tails, voir la Licence Publique G&eacute;n&eacute;rale GNU. </p>
 <p>Un exemplaire de la Licence Publique G&eacute;n&eacute;rale GNU doit &ecirc;tre fourni avec ce programme&nbsp;; si ce n'est pas le cas, &eacute;crivez &agrave; la Free Software Foundation Inc., 675 Mass Ave, Cambridge, MA 02139, Etats-Unis. </p>
@@ -35,11 +35,11 @@ a.icone:hover { text-decoration: none; }
 
 <hr>
 
-<p><b>Les icones de l'interface sont de <a href="http://diala.rezo.net">Diala Aschkar</a> et de <a href="http://jimmac.musichall.cz/">Jakub &laquo;Jimmac&raquo; Steiner.</a></b></p>
+<p><b>Les icones de l'interface sont de <a href="http://diala.rezo.net/">Diala Aschkar</a> et de <a href="http://jimmac.musichall.cz/">Jakub &laquo;Jimmac&raquo; Steiner.</a></b></p>
 
 <hr>
 
-<p><b>Les traductions de l'interface sont le fruit du travail réalisé par une équipe de traducteurs <a href="http://www.spip.net/rubrique4.html">réunis sur le site spip.net</a>.</b></p>
+<p><b>Les traductions de l'interface sont le fruit du travail r&eacute;alis&eacute; par une &eacute;quipe de traducteurs <a href="http://www.spip.net/rubrique4.html">r&eacute;unis sur le site spip.net</a>.</b></p>
 
 <hr>
 <p>GNU General Public License&nbsp;: [<a href='license.txt'>version texte</a>] [<a href='http://www.gnu.org/copyleft/gpl.html'>version HTML</a>]</p>
