balise #HTTP_VARS, #SELF & #FORMULAIRE_ en squelette

--- a/sommaire-dist.html
+++ b/sommaire-dist.html
@@ -143,9 +143,8 @@
 
 	<!-- Inscription au site -->
 
-	[<div class="formulaire"><:participer_site:>
-	<br /><br />
-	(#FORMULAIRE_INSCRIPTION)</div>]
+	[<div class="formulaire"><:participer_site:><br /><br />
+	  <div class='reponse_formulaire'><b>(#FORMULAIRE_INSCRIPTION)</b></div></div>]
 
 	</div>
 
