--- a/auteur-dist.html
+++ b/auteur-dist.html
@@ -66,7 +66,8 @@
 [<div class="notes">(#NOTES)</div>]
 </div>
 
-[<p><b><:envoyer_message:></b></p>(#FORMULAIRE_ECRIRE_AUTEUR)]
+[<p><b><:envoyer_message:></b></p>
+<div class='spip_encadrer'><b>(#FORMULAIRE_ECRIRE_AUTEUR)</b></div>]
 
 <!-- Articles de l'auteur -->
 
