typo dans les nouveaux squelettes (N. Krebs)

--- a/formulaire_ecrire_auteur-dist.html
+++ b/formulaire_ecrire_auteur-dist.html
@@ -14,6 +14,6 @@
 [<input type="hidden" name="id_auteur" value="(#HTTP_VARS{id_auteur})" />]
 <div align="right">
 	<input type="submit"  class="spip_bouton" name="valide"
-		 value="[(#HTTP_VARS{valide})"] />
+		 value="[(#HTTP_VARS{valide})]" />
 </div>
 </form>
