--- a/formulaire_forum-dist.html
+++ b/formulaire_forum-dist.html
@@ -1,6 +1,6 @@
 <form action='[(#HTTP_VARS{url})]' method='post' name='formulaire'>
 <input type='hidden' name='ajout_forum' value='oui' />
-<input type='hidden' name='id_message', value='[(#HTTP_VARS{id_message})]' />
+<input type='hidden' name='id_message' value='[(#HTTP_VARS{id_message})]' />
 <input type='hidden' name='alea', value='[(#HTTP_VARS{alea})]' />
 <input type='hidden' name='hash', value='[(#HTTP_VARS{hash})]' />
 <input type='hidden' name='retour' value='[(#HTTP_VARS{retour})]' />
