nouveaux squelettes pour les formulaires à squelette

--- a/breve-dist.html
+++ b/breve-dist.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="habillage.css" type="text/css" media="projection, screen, tv">
 <!-- media="print" permet d'utiliser cette feuille de style quand vous imprimez depuis votre navigateur -->
 <link rel="stylesheet" href="impression.css" type="text/css" media="print">
-
+<link rel='stylesheet' href='spip_admin.css' type='text/css' />
 </head>
 
 <body bgcolor="white" dir="#LANG_DIR">
@@ -217,6 +217,7 @@
 </B_forums>
 
 </div>
+#FORMULAIRE_ADMIN
 </body></html>
 </BOUCLE_breve_principal>
 <:aucune_breve:>
