--- a/formulaire_ecrire_auteur-dist.html
+++ b/formulaire_ecrire_auteur-dist.html
@@ -1,15 +1,16 @@
 [<br /><img src='puce(#HTTP_VARS{sujetko}).gif' border='0' alt='-' /> <:form_prop_indiquer_sujet:><br />&nbsp;]
 [<br /><img src='puce(#HTTP_VARS{mailko}).gif' border='0' alt='-' /> <:form_prop_indiquer_email:><br /><br />]
-<form action="#SELF" method='post'>
-<:form_pet_votre_email:><br />
+<form action="[(#HTTP_VARS{action})]" method='post'>
+<p><label><:form_pet_votre_email:>
 	<input type="text" class="forml" name="email_message_auteur"
 		 value="[(#HTTP_VARS{mail})]" SIZE="30" />
-<p><:form_prop_sujet:><br />
+</label></p>
+<p><label><:form_prop_sujet:><br />
 	<input type="text" class="forml" name="sujet_message_auteur"
 		 value="[(#HTTP_VARS{sujet})]" SIZE="30" />
-</p>
+</label></p>
 <p>
-<textarea name='texte_message_auteur' rows='10' class='forml' cols='40' wrap=soft>[(#HTTP_VARS{texte})]</textarea>
+<textarea name='texte_message_auteur' rows='10' class='forml' cols='40'>[(#HTTP_VARS{texte})]</textarea>
 </p>
 [<input type="hidden" name="id_auteur" value="(#HTTP_VARS{id_auteur})" />]
 <div align="right">
