--- a/forum-dist.html
+++ b/forum-dist.html
@@ -12,7 +12,7 @@
 
 <!-- media="..." permet de ne pas utiliser ce style sous Netscape 4 (sinon plantage) -->
 <link rel="stylesheet" href="habillage.css" type="text/css" media="print, projection, screen, tv">
-
+<link rel='stylesheet' href='spip_admin.css' type='text/css' />
 </head>
 
 <body bgcolor="white" dir="#LANG_DIR">
@@ -91,7 +91,7 @@
 
 </div>
 
-
+#FORMULAIRE_ADMIN
 </body>
 </html>
 
