--- a/rubrique-dist.html
+++ b/rubrique-dist.html
@@ -19,7 +19,7 @@
 
 <!-- Lien vers le backend pour navigateurs eclaires -->
 <link rel="alternate" type="application/rss+xml" title="<:syndiquer_rubrique:>" href="backend.php3?id_rubrique=#ID_RUBRIQUE">
-
+<link rel='stylesheet' href='spip_admin.css' type='text/css' />
 </head>
 
 <body bgcolor="white" dir="#LANG_DIR">
@@ -220,7 +220,7 @@
 
 
 </div>
-
+#FORMULAIRE_ADMIN
 </body>
 </html>
 
