--- a/sommaire-dist.html
+++ b/sommaire-dist.html
@@ -15,7 +15,7 @@
 
 <!-- Lien vers le backend pour navigateurs eclaires -->
 <link rel="alternate" type="application/rss+xml" title="<:syndiquer_site:>" href="backend.php3">
-
+<link rel='stylesheet' href='spip_admin.css' type='text/css' />
 </head>
 
 <body bgcolor="white" dir="#LANG_DIR">
@@ -166,7 +166,7 @@
 </div>
 
 
-
+#FORMULAIRE_ADMIN
 </body>
 </html>
 
