--- a/article-dist.html
+++ b/article-dist.html
@@ -14,11 +14,10 @@
 <link rel="stylesheet" href="habillage.css" type="text/css" media="projection, screen, tv">
 <!-- media="print" permet d'utiliser cette feuille de style quand vous imprimez depuis votre navigateur -->
 <link rel="stylesheet" href="impression.css" type="text/css" media="print">
-
+<link rel='stylesheet' href='spip_admin.css' type='text/css' />
 </head>
 
 <body bgcolor="white" dir="#LANG_DIR">
-
 <div id="navigation">
 
 <h1 class="structure"><:navigation:></h1>
@@ -291,7 +290,7 @@
 </div>
 
 
-
+#FORMULAIRE_ADMIN
 </body>
 </html>
 
