--- a/auteur-dist.html
+++ b/auteur-dist.html
@@ -16,6 +16,7 @@
 <link rel="stylesheet" href="habillage.css" type="text/css" media="projection, screen, tv">
 <!-- media="print" permet d'utiliser cette feuille de style quand vous imprimez depuis votre navigateur -->
 <link rel="stylesheet" href="impression.css" type="text/css" media="print">
+<link rel='stylesheet' href='spip_admin.css' type='text/css' />
 
 </head>
 
@@ -87,10 +88,9 @@
 </div>
 
 </div>
-
+#FORMULAIRE_ADMIN
 </body>
 </html>
-
 
 </BOUCLE_auteur_principal>
 <:aucun_auteur:>
