--- a/formulaire_forum-dist.html
+++ b/formulaire_forum-dist.html
@@ -1,55 +1,59 @@
 <form action='[(#HTTP_VARS{url})]' method='post' name='formulaire'>
-<input type='hidden' name='ajout_forum' value='oui' />
-<input type='hidden' name='id_message' value='[(#HTTP_VARS{id_message})]' />
-<input type='hidden' name='alea', value='[(#HTTP_VARS{alea})]' />
-<input type='hidden' name='hash', value='[(#HTTP_VARS{hash})]' />
-<input type='hidden' name='retour' value='[(#HTTP_VARS{retour})]' />
-[(#HTTP_VARS{modere})]
-[(#HTTP_VARS{afficher_non})]
-[(#HTTP_VARS{previsu})
-      <div class='spip_encadrer'><b><:forum_titre:></b>
-	<br />
-	<input type='text' name='titre' 
-	  value='[(#HTTP_VARS{titre})]' class='forml' size='40' />
-      </div>
+      <input type='hidden' name='ajout_forum' value='oui' />
+      <input type='hidden' name='id_message' value='[(#HTTP_VARS{id_message})]' />
+      <input type='hidden' name='alea' value='[(#HTTP_VARS{alea})]' />
+      <input type='hidden' name='hash' value='[(#HTTP_VARS{hash})]' />
+      <input type='hidden' name='retour' value='[(#HTTP_VARS{retour})]' />
+      [(#HTTP_VARS{modere})]
+      [(#HTTP_VARS{afficher_non})]
+      [(#HTTP_VARS{previsu})
+      <fieldset class='spip_encadrer'>
+	<legend><b><:forum_titre:></b></legend>
+	<label>
+	  <input type='text' name='titre' 
+	    value='[(#HTTP_VARS{titre})]' class='forml' size='40' />
+	</label>
+      </fieldset>
       <br />
-      <div class='spip_encadrer'><b><:forum_texte:></b>
-	<br />
-	<:info_creation_paragraphe:>
-	<br /> 
+      <fieldset>
+	<legend><b><:forum_texte:></b></legend>
+	<p><:info_creation_paragraphe:></p>
 	[(#HTTP_VARS{afficher_barre})]
-  <textarea name='texte'    rows='12' class='forml' cols='40'
+	<textarea name='texte' rows='12' class='forml' cols='40'
 	  [(#HTTP_VARS{afficher_claret})] >[(#HTTP_VARS{texte})]</textarea>
-      </div>
-	  [(#HTTP_VARS{table})]
-      <br /><div class='spip_encadrer'>
-	<:forum_lien_hyper:>
-	<br />
-	<:forum_page_url:>
-	<br />
-	<:forum_titre:>
-	<br />
-	<input type='text' name='nom_site_forum' class='forml' size='40'"
+      </fieldset>
+      <br />
+      [(#HTTP_VARS{table})]
+      <fieldset class='spip_encadrer'>
+	<legend><:forum_lien_hyper:></legend>
+	<p><:forum_page_url:></p>
+	<p><label><:forum_titre:>
+	  <input type='text' name='nom_site_forum' class='forml' size='40'
 	  value='[(#HTTP_VARS{nom_site_forum})]'  />
-	<br />
-	<:forum_url:>
-	<br />
+	</label></p>
+	<p><label><:forum_url:>
 	<input type='text' name='url_site' class='forml'  size='40'
 	  value='[(#HTTP_VARS{url_site})]' />
-	</div>
-	  <br /><div class='spip_encadrer'>
-	<:forum_qui_etes_vous:>
-	<br />
-	<:forum_votre_nom:>
-	<br />
-	<input type='text' name='auteur' value='[(#HTTP_VARS{auteur})]'
-	  class='forml' size='40[(#HTTP_VARS{disabled})] />
-	  <br />
-	  <:forum_votre_email:>
-	  <br />
-	  <input type='text' name='email_auteur' value='[(#HTTP_VARS{email_auteur})]'
-	  class='forml' size='40[(#HTTP_VARS{disabled})] />
-      </div>
+	</label></p>
+	</fieldset>
+      <br />
+	<fieldset class='spip_encadrer'>
+	  <legend><:forum_qui_etes_vous:></legend>
+	  <p>
+	  <label>
+	    <:forum_votre_nom:>
+	    <input type='text' name='auteur' value='[(#HTTP_VARS{auteur})]'
+	      class='forml' size='40' [(#HTTP_VARS{disabled})] />
+	  </label>
+	  </p>
+	  <p>
+	  <label>
+	    <:forum_votre_email:>
+	    <input type='text' name='email_auteur' value='[(#HTTP_VARS{email_auteur})]'
+	      class='forml' size='40' [(#HTTP_VARS{disabled})] />
+	  </label>
+	</p>
+      </fieldset>
       <br /><div align='right'>
 	<input type='submit'  value='<:forum_voir_avant:>' class='spip_bouton'></div>]
 </form>
