--- a/formulaire_signature.html
+++ b/formulaire_signature.html
@@ -1,11 +1,10 @@
-<BOUCLE1(ARTICLES){id_article}>
 <form	method='post'
-	action='#SELF#sp#ID_ARTICLE' >
+	action='#SELF#sp[(#HTTP_VARS{id_article})]' >
 
 <input type="hidden" name="url_page" value="#URL_SITE_SPIP/#SELF">
 [(#HTTP_VARS{texte}|traiter_raccourcis|interdire_scripts)]
 <div>
-	<a name='#sp#ID_ARTICLE'></a>
+	<a name='#sp[(#HTTP_VARS{id_article})]' id='#sp[(#HTTP_VARS{id_article})]'></a>
 	<fieldset>
 		<p>
 			<b><:form_pet_votre_nom:></b><br />
@@ -17,9 +16,9 @@
 		</p>
 	</fieldset>
 	<br />
-	<fieldset>
+	[<fieldset>
 		<p>
-			[(#HTTP_VARS{site_obli}) <:form_pet_votre_site:><br />]
+			(#HTTP_VARS{site_obli}) <:form_pet_votre_site:><br />
 			<b><:form_pet_nom_site2:></b><br />
 			<input type="text" class="forml" name="nom_site" value="" size="20" />
 		</p>
@@ -27,8 +26,9 @@
 			<b><:form_pet_adresse_site:></b><br />
 			<input type="text" class="forml" name="url_site" value="http://" size="20" />
 		</p>
-	</fieldset>
-	[(#HTTP_VARS{message}) <br />
+	</fieldset>][
+	(#HTTP_VARS{message})
+	<br />
 		<fieldset>
 			<b><:form_pet_message_commentaire:></b><br />
 			<textarea name="message" rows="3" class="forml" cols="20" wrap='soft'></textarea>
@@ -36,6 +36,5 @@
 	]
 </div>
 <br />
-<div align="right"><input type="submit" name="Valider" class="spip_bouton" value="<:bouton_valider:>" /></div>
+<div align="right"><input type="submit" class="spip_bouton" value="<:bouton_valider:>" /></div>
 </form>
-</BOUCLE1>
