--- a/login-dist.html
+++ b/login-dist.html
@@ -4,6 +4,7 @@
 	<title><:login_acces_prive:></title>
 	<meta http-equiv="Content-Type" content="text/html; charset=#CHARSET">
 	<link rel="stylesheet" href="spip_style.css" type="text/css">
+	<link rel='stylesheet' href='spip_admin.css' type='text/css' />
 </head>
 <body dir="#LANG_DIR" bgcolor="#ffffff" text="#000000" link="#e86519" vlink="#6e003a" alink="#ff9900">
 
@@ -16,6 +17,6 @@
 #LOGIN_PRIVE
 </td></tr></table></center>
 
-
+#FORMULAIRE_ADMIN
 </body>
 </html>
