--- a/site-dist.html
+++ b/site-dist.html
@@ -16,7 +16,7 @@
 <link rel="stylesheet" href="habillage.css" type="text/css" media="projection, screen, tv">
 <!-- media="print" permet d'utiliser cette feuille de style quand vous imprimez depuis votre navigateur -->
 <link rel="stylesheet" href="impression.css" type="text/css" media="print">
-
+<link rel='stylesheet' href='spip_admin.css' type='text/css' />
 </head>
 
 <body bgcolor="white">
@@ -83,6 +83,7 @@
 
 </div>
 
+#FORMULAIRE_ADMIN
 </body>
 </html>
 
