var_mode plutot que var_debug

--- a/formulaire_ecrire_auteur-dist.html
+++ b/formulaire_ecrire_auteur-dist.html
@@ -1,13 +1,13 @@
-[<br /><img src='puce(#HTTP_VARS{sujetko}).gif' border='0' alt='-' /> <:form_prop_indiquer_sujet:><br />&nbsp;]
-[<br /><img src='puce(#HTTP_VARS{mailko}).gif' border='0' alt='-' /> <:form_prop_indiquer_email:><br /><br />]
-<form action="[(#HTTP_VARS{action})]" method='post'>
+[<br /><img src='puce(#HTTP_VARS{sujetko}).gif' border='0' alt='-' /> <:form_prop_indiquer_sujet:><br />&nbsp;][
+<br /><img src='puce(#HTTP_VARS{mailko}).gif' border='0' alt='-' /> <:form_prop_indiquer_email:><br /><br />
+]<form action="[(#HTTP_VARS{action})]" method='post'>
 <p><label><:form_pet_votre_email:>
 	<input type="text" class="forml" name="email_message_auteur"
-		 value="[(#HTTP_VARS{mail})]" SIZE="30" />
+		 value="[(#HTTP_VARS{mail})]" size="30" />
 </label></p>
 <p><label><:form_prop_sujet:><br />
 	<input type="text" class="forml" name="sujet_message_auteur"
-		 value="[(#HTTP_VARS{sujet})]" SIZE="30" />
+		 value="[(#HTTP_VARS{sujet})]" size="30" />
 </label></p>
 <p>
 <textarea name='texte_message_auteur' rows='10' class='forml' cols='40'>[(#HTTP_VARS{texte})]</textarea>
