--- a/formulaire_forum-dist.html
+++ b/formulaire_forum-dist.html
@@ -15,7 +15,7 @@
 	</label>
       </fieldset>
       <br />
-      <fieldset>
+      <fieldset class='spip_encadrer'>
 	<legend><b><:forum_texte:></b></legend>
 	<p><:info_creation_paragraphe:></p>
 	[(#HTTP_VARS{afficher_barre})]
