--- a/formulaire_forum-dist.html
+++ b/formulaire_forum-dist.html
@@ -11,7 +11,7 @@
 	<legend><b><:forum_titre:></b></legend>
 	<label>
 	  <input type='text' name='titre' 
-	    value='[(#HTTP_VARS{titre})]' class='forml' size='40' />
+	    [value="> (#HTTP_VARS{titre}|supprimer_prefixe{'>'}|supprimer_numero|entites_html)" ]class='forml' size='40' />
 	</label>
       </fieldset>
       <br />
@@ -29,11 +29,11 @@
 	<p><:forum_page_url:></p>
 	<p><label><:forum_titre:>
 	  <input type='text' name='nom_site_forum' class='forml' size='40'
-	  value='[(#HTTP_VARS{nom_site_forum})]'  />
+	  value="[(#HTTP_VARS{nom_site_forum})]"  />
 	</label></p>
 	<p><label><:forum_url:>
 	<input type='text' name='url_site' class='forml'  size='40'
-	  value='[(#HTTP_VARS{url_site})]' />
+	  value="[(#HTTP_VARS{url_site})]" />
 	</label></p>
 	</fieldset>
       <br />
@@ -42,19 +42,19 @@
 	  <p>
 	  <label>
 	    <:forum_votre_nom:>
-	    <input type='text' name='auteur' value='[(#HTTP_VARS{auteur})]'
+	    <input type='text' name='auteur' value="[(#HTTP_VARS{auteur})]"
 	      class='forml' size='40' [(#HTTP_VARS{disabled})] />
 	  </label>
 	  </p>
 	  <p>
 	  <label>
 	    <:forum_votre_email:>
-	    <input type='text' name='email_auteur' value='[(#HTTP_VARS{email_auteur})]'
+	    <input type='text' name='email_auteur' value="[(#HTTP_VARS{email_auteur})]"
 	      class='forml' size='40' [(#HTTP_VARS{disabled})] />
 	  </label>
 	</p>
       </fieldset>
       <br /><div align='right'>
-	<input type='submit'  value='<:forum_voir_avant:>' class='spip_bouton'></div>]
+	<input type='submit'  value="<:forum_voir_avant:>" class='spip_bouton'></div>]
 </form>
 
