--- a/formulaire_recherche-dist.html
+++ b/formulaire_recherche-dist.html
@@ -4,5 +4,5 @@
 		size='20'
 		class='formrecherche'
 		name='recherche'
-		value='[(#HTTP_VARS{recherche})]' />
+		value="[(#HTTP_VARS{recherche})]" />
 </form>
