--- a/formulaire_inscription-dist.html
+++ b/formulaire_inscription-dist.html
@@ -1,4 +1,5 @@
-</b></div><:form_forum_indiquer_nom_email:>
+<div><b>
+<:form_forum_indiquer_nom_email:>
 <form method='post' action='#SELF' style='border: 0px; margin: 0px;'> 
 <div><b>
 <:form_pet_votre_nom:>
@@ -9,6 +10,6 @@
 </b></div>
 <div><input type="text" class="forml" name="mail_inscription" value="" size="30" /></div>
 <br />
-<div align="right"><input type="submit" class="spip_bouton" value="<:bouton_valider:>" /></div> 
+<div align="right"><input type="submit" class="spip_bouton" value="<:bouton_valider:>" /></div>
 </form>
-<div><b>
+</b></div>
