supprimer_numero est déjà fait au démarrage

--- a/formulaire_forum-dist.html
+++ b/formulaire_forum-dist.html
@@ -11,7 +11,7 @@
 	<legend><b><:forum_titre:></b></legend>
 	<label>
 	  <input type='text' name='titre' 
-	    [value="(#HTTP_VARS{titre}|supprimer_numero)" ]class='forml' size='40' />
+	    [value="(#HTTP_VARS{titre})" ]class='forml' size='40' />
 	</label>
       </fieldset>
       <br />
