mise en squelette des balises LOGIN_* et mise en conformité des autres balises dynamiques

--- a/sommaire-dist.html
+++ b/sommaire-dist.html
@@ -140,10 +140,11 @@
 	</div>
 	</B_syndic>
 
-	<!-- Inscription au site -->
+	[<!-- Inscription au site -->
 
-	[<div class="formulaire"><:participer_site:><br /><br />
-	  <div class='reponse_formulaire'><b>(#FORMULAIRE_INSCRIPTION)</b></div></div>]
+		<div class="formulaire"><:participer_site:>
+			<br /><br />(#FORMULAIRE_INSCRIPTION)
+		</div>]
 
 	</div>
 
