--- a/formulaire_login-dist.html
+++ b/formulaire_login-dist.html
@@ -12,14 +12,14 @@ onclick="javascript:window.open('spip_pass.php3?[mode=(#HTTP_VARS{mode})]', 'spi
 	<script type="text/javascript" src="ecrire/md5.js"></script>
 	<form	name="form_login"
 		action="[(#HTTP_VARS{action2})]"
-		method="post"[(#HTTP_VARS{source})
+		method="post"[(#HTTP_VARS{source}|egal{spip})
 		onSubmit='if (this.session_password.value) {
 			this.session_password_md5.value = calcMD5("[(#HTTP_VARS{alea_actuel})]" + this.session_password.value);
 			this.next_session_password_md5.value = calcMD5("[(#HTTP_VARS{alea_futur})]" + this.session_password.value);
 			this.session_password.value = "";
 			}']>
 		<div class="spip_encadrer" style="text-align: [(#HTTP_VARS{spip_lang_left})]">[
-			<div class="reponse_formulaire">(#HTTP_VARS*{statut})<br /><br /></div>
+			<div class="reponse_formulaire">(#HTTP_VARS*{erreur})<br /><br /></div>
 ][
 			<label><b><:login_login2:></b><br /></label>(#HTTP_VARS{login}|vide)
 			<input type="text" name="var_login" class="forml" value="" size="40" />
@@ -35,7 +35,7 @@ document.write('<:login_login:>&nbsp;<b>[(#HTTP_VARS{login})]</b><br />&#91<a hr
 		<a href="[(#HTTP_VARS{action})]"><:login_recharger:></a>
 	</font>
 	<br /><br />
-	<label><b>Login (identifiant de connexion au site)&nbsp;:</b><br /></label>
+	<label><b><:login_login2:></b><br /></label>
 	<input type='text' name='session_login' class='forml' [value="(#HTTP_VARS{login})" ]size='40' />
 </noscript>
 [<img src="IMG/auton(#HTTP_VARS{id_auteur}).jpg" width="75" align="right">]
