--- a/formulaire_login-dist.html
+++ b/formulaire_login-dist.html
@@ -27,7 +27,7 @@ onclick="javascript:window.open('spip_pass.php3?[mode=(#HTTP_VARS{mode})]', 'spi
 <div>
 			<input type="hidden" name="session_login_hidden" value="(#HTTP_VARS{login})" />
 <script type="text/javascript"><!--
-document.write('<:login_login:>&nbsp;<b>[(#HTTP_VARS{login})]</b><br />&#91<a href="spip_cookie.php3?cookie_admin=non&amp;url=[(#HTTP_VARS{url})]"><font size="2"><:login_autre_identifiant:></font></a>&#93')
+document.write("<:login_login:>&nbsp;<b>[(#HTTP_VARS{login})]<" + "/b><br />&#91<a href='spip_cookie.php3?cookie_admin=non&amp;url=[(#HTTP_VARS{url})]'><font size='2'><:login_autre_identifiant:><" + "/font><" + "/a>&#93")
 //--></script>
 <noscript>
 	<font face="Georgia, Garamond, Times, serif" size="3">
@@ -38,8 +38,8 @@ document.write('<:login_login:>&nbsp;<b>[(#HTTP_VARS{login})]</b><br />&#91<a hr
 	<label><b><:login_login2:></b><br /></label>
 	<input type='text' name='session_login' class='forml' [value="(#HTTP_VARS{login})" ]size='40' />
 </noscript>
-[<img src="IMG/auton(#HTTP_VARS{id_auteur}).jpg" width="75" align="right">]
-</div><p><br /><br .>
+[<img src="IMG/auton(#HTTP_VARS{id_auteur}).jpg" width="75" align="right" alt="[(#HTTP_VARS{login})]">]
+</div><p><br /><br />
 		<label><b><:login_pass2:></b></label>&nbsp;<input type="password" name="session_password" class="forml" value="" size="40" />
 		<input type="hidden" name="essai_login" value="oui" />
 		<br />&nbsp;&nbsp;&nbsp;&nbsp;<input type="checkbox"
