--- a/rubrique-dist.html
+++ b/rubrique-dist.html
@@ -181,14 +181,15 @@
 	</div>
 	</div>
 	</B_sites>
-
-	[<div class="menu"><div class="divers">
-	<div class="menu-titre">
-	<:proposer_site:>
-	</div>
-	(#FORMULAIRE_SITE)
-	</div></div>]
-
+	[
+<div class="menu">
+    <div class="divers">
+      <div class="menu-titre"><:proposer_site:>
+	<div class='reponse_formulaire'>(#FORMULAIRE_SITE)</div>
+      </div>
+    </div>
+</div>
+]
 	</div>
 
 [<div class="chapo">(#TEXTE)</div>]
