--- a/formulaire_site-dist.html
+++ b/formulaire_site-dist.html
@@ -1,10 +1,18 @@
 <form action="#SELF" method="post">
-<p><div class='spip_encadrer'><b><:form_prop_nom_site:></b><br />
-<input type="text" class="forml" name="nom_site" value="" size="30">
-</p><p><b><:form_prop_url_site:></b></p><br />
-<input type="text" class="forml" name="url_site" value="" size="30"></div>
-<p><b><:form_prop_description:></b></p><br />
-<textarea name='description_site' rows='5' class='forml' cols='40' wrap=soft></textarea>
-<div align="right"><input type="submit" name="valider" class="spip_bouton" value="<:bouton_valider:>">
-</div>
+      <br />
+      <fieldset	class='spip_encadrer' style='color: black; font-size: 90%'>
+	<legend></legend>
+	<label>
+	  <:form_prop_nom_site:>
+	  <input type="text" class="forml" name="nom_site" value="" size="30">
+	</label>
+	<label>
+	  <:form_prop_url_site:>
+	  <input type="text" class="forml" name="url_site" value="" size="30">
+	</label>
+	<label><:form_prop_description:>
+	  <textarea name='description_site' rows='5' class='forml' cols='40'></textarea>
+	</label>
+	<div align="right"><input type="submit" class="spip_bouton" value="<:bouton_valider:>"></div>
+      </fieldset>
 </form>
