--- a/formulaire_signature-dist.html
+++ b/formulaire_signature-dist.html
@@ -1,41 +1,44 @@
-<form	method='post'
-	action='#SELF#sp[(#HTTP_VARS{id_article})]' >
-
-<input type="hidden" name="url_page" value="#URL_SITE_SPIP/#SELF">
-[(#HTTP_VARS{texte}|traiter_raccourcis|interdire_scripts)]
-<div>
-	<a name='#sp[(#HTTP_VARS{id_article})]' id='#sp[(#HTTP_VARS{id_article})]'></a>
-	<fieldset>
-		<p>
-			<b><:form_pet_votre_nom:></b><br />
-			<input type="text" class="forml" name="nom_email" value="" size="20" />
-    		</p>
-		<p>
-			<b><:form_pet_votre_email:></b><br />
-			<input type="text" class="forml" name="adresse_email" value="" size="20" />
-		</p>
+<form method='post'
+      action='#SELF#sp[(#HTTP_VARS{id_article})]' >
+      <input type="hidden" name="url_page" value="#URL_SITE_SPIP/#SELF">
+      <div class='spip_encadrer' style='color: black; font-size: 80%; font-weight: normal;'>
+	[(#HTTP_VARS{texte}|traiter_raccourcis|interdire_scripts)]
+	<fieldset style='font-size: 110%; font-weight: bold;'>
+	  <legend></legend>
+	  <label>
+	    <:form_pet_votre_nom:>
+	    <input type="text" class="forml" name="nom_email" value="" size="20" />
+	  </label>
+	  <label>
+	    <:form_pet_votre_email:><br />
+	    <input type="text" class="forml" name="adresse_email" value="" size="20" />
+	  </label>
 	</fieldset>
 	<br />
-	[<fieldset>
-		<p>
-			(#HTTP_VARS{site_obli}|choixsiegal{oui,'', ' '})
-	    		<:form_pet_votre_site:><br />
-			<b><:form_pet_nom_site2:></b><br />
-			<input type="text" class="forml" name="nom_site" value="" size="20" />
-		</p>
-		<p>
-			<b><:form_pet_adresse_site:></b><br />
-			<input type="text" class="forml" name="url_site" value="http://" size="20" />
-		</p>
-	</fieldset>][
-	(#HTTP_VARS{message}|choixsiegal{oui,' ', ''})
+	<p>[(#HTTP_VARS{site_obli}|choixsiegal{oui,'', ' '})<:form_pet_votre_site:><br />]
+	<fieldset style='font-size: 110%; font-weight: bold;'>
+	  <legend></legend>
+	  <label>
+	  <:form_pet_nom_site2:><br />
+	  <input type="text" class="forml" name="signature_nom_site" value="" size="20" />
+	  </label>
+	  <label>
+	    <:form_pet_adresse_site:><br />
+	    <input type="text" class="forml" name="signature_url_site" value="http://" size="20" />
+	  </label>
+	</fieldset>[
 	<br />
-		<fieldset>
-			<b><:form_pet_message_commentaire:></b><br />
-			<textarea name="message" rows="3" class="forml" cols="20" wrap='soft'></textarea>
-		</fieldset>
+	<fieldset style='font-weigth: bold'>
+	  <legend></legend>
+	(#HTTP_VARS{message}|choixsiegal{oui,' ', ''})
+	  <label>
+	  <:form_pet_message_commentaire:><br />
+	    <textarea name="message" rows="3" class="forml" cols="20"></textarea>
+	  </label>
+	</fieldset>
 	]
-</div>
-<br />
-<div align="right"><input type="submit" class="spip_bouton" value="<:bouton_valider:>" /></div>
+	<br />
+	<div align="right"><input type="submit" class="spip_bouton" value="<:bouton_valider:>" /></div>
+      </div>
 </form>
+
